# repTemp

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  use_and_delete.py
docs/source/: Architecture.rst  Development.rst  Introduction.rst  UseCases.rst  Using_repTemp.rst  Versions.rst  conf.py  index.rst
src/repTemp/core/: exampleObjects.py
src/repTemp/workflows/: workflow_A.py
tests/: README.txt
