[build-system]
requires = ["flit_core >=3.2,<4","pydantic>=2.6.4","numpy>=1.26.4","py-jsonic>=0.0.2"]
build-backend = "flit_core.buildapi"

[project]
name = "repTemp
authors = [{name = "LuTze"}]
description = "template repo only"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.0.0"
dependencies = ["pydantic>=2.6.4","numpy>=1.26.4","py-jsonic>=0.0.2"]

[project.urls]
Home = "https://github.com/Ellutze/repTemp"
